<resources>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="functions">Functions</string>
    <string name="window">Window</string>
    <string name="clearall">Clear All</string>
    <string name="trace">Trace On/Off</string>
    <string name="zoomin">Zoom In</string>
    <string name="zoomout">Zoom Out</string>
    <string name="diffysol">Diffy Q Solution</string>
    <string name="slopefield">Slope Field</string>
    <string name="dydx">dy/dx On/Off</string>
    <string name="notSupported">Not yet supported for polar or parametric coordinates.</string>
    <string name="noFunDisp">No functions displayed.</string>
    <string name="tapFun">Tap on function to select.</string>
    <string name="warning2">Warning: Must enter 2 functions for Number </string>
    <string name="warningFun">Warning: Function </string>
    <string name="isInvalid"> is invalid.</string>
    <string name="startT">Start T:</string>
    <string name="endT">End T:</string>
    <string name="startTheta">Start Theta:</string>
    <string name="endTheta">End Theta:</string>
    <string name="xMinMax">X Min must be less than X Max.</string>
    <string name="yMinMax">Y Min must be less than Y Max.</string>
    <string name="xPos">X Scale must be positive.</string>
    <string name="yPos">Y Scale must be positive.</string>
    <string name="windowInvalid">One or more inputs is invalid.</string>
    <string name="constants">Constants</string>
    <string name="derivative">Derivative</string>
    <string name="integrationArc">Integration, Arc Length &amp; Surface Area</string>
    <string name="keyboard">Math Keyboard</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="home">Home</string>
    <string name="donate">Donate</string>
    <string name="help">Help</string>
    <string name="integration">Integration</string>
    <string name="arclength">Arc Length &amp;\nSurface Area</string>
    <string name="taylorseries">Taylor Series</string>
    <string name="tangentline">Tangent Line</string>
    <string name="formulatables">Formula Tables</string>
    <string name="invalidfunction">Invalid function: </string>
    <string name="invalidinput">Invalid input: </string>
    <string name="invalidfunctionrk">Invalid function.</string>
    <string name="invalidbounds">Invalid bounds.</string>
    <string name="findArc">Find the arc length of</string>
    <string name="findSurface">Find the surface area of</string>
    <string name="Single">Single</string>
    <string name="Double">Double</string>
    <string name="arcLength">Arc Length</string>
    <string name="surfaceArea">Surface Area</string>
    <string name="overBounds">over the bounds</string>
    <string name="invalidNumber">Sorry, this number is invalid.</string>
    <string name="invalidVariable">This must be a function of the variable you wish to differentiate with respect to.</string>
    <string name="invalidCenter">Sorry, center expression is not valid: </string>
    <string name="invalidStart">Start value not valid: </string>
    <string name="invalidEnd">Start of outer bounds not valid: </string>
    <string name="invalidStartX">End of outer bounds not valid: </string>
    <string name="invalidEndX">Start of inner bounds not valid: </string>
    <string name="invalidStartY">End of inner bounds not valid: </string>
    <string name="invalidEndY">End y not valid: </string>
    <string name="helpFunctions">Sine: sin()\nCosine: cos()\nTangent: tan()\nSecant: sec()\nCosecant: csc()\nCotangent: cot()\nInverse Sine: arcsin()\nInverse Cosine: arccos()\nInverse Tangent: arctan()\nInverse Secant: arcsec()\nInverse Cosecant: arccsc()\nInverse Cotangent: arccot()\nNatural Log: ln()\nLog Base 2: log2()\nLog Base 10: log10()\nSquare Root: sqrt()\nExponents: ^ or **\nMultiplication: *\nHyperbolic Sine: sinh()\nHyperbolic Cosine: cosh()\nHyperbolic Tangent: tanh()\nHyperbolic Secant: sech()\nHyperbolic Cosecant: csch()\nHyperbolic Cotangent: coth()\nInverse Hyperbolic Sine: arcsinh()\nInverse Hyperbolic Cosine: arccosh()\nInverse Hyperbolic Tangent: arctanh()\nInverse Hyperbolic Secant: arcsech()\nInverse Hyperbolic Cosecant: arccsch()\nInverse Hyperbolic Cotangent: arccoth()\nAbsolute Value: abs()\nSign Function: sign()\nAnd: &amp;, and\nOr: |, or\nNot: ~, not\nPiece-wise functions (conditional)?(function):(conditional)?(function)</string>
    <string name="helpGraph">The graph has modes for standard, polar and parametric functions.  Standard and polar use x as the independent variable (since there is no theta on your keyboard), and parametric equations use t.  The 3D graph, slope field and diffy q solver use x and y.  The functions will turn green if they are valid and red if they are not.  Currently, only standard functions support the trace and dy/dx feature.  Bounds for the polar and parametric functions can be found in window settings.</string>
    <string name="helpDerivative">The derivative must be a function of the variable(s) you specify.  For partial derivatives, enter multiple, comma-seperated variables in the f(__) field.  The function will turn green when valid.  If it is red, you may click Derive to be told of any errors.  The derivative may appear to be quite messy for higher orders or complicated functions, but it is always correct.</string>
    <string name="helpIntegral">Integration and arc length on newer phones should be nearly instantaneous.  On older phones there may be a slight lag.  For double integration and surface area, there may be some lag on newer phones and significant lag on older.  The tool uses the Romberg method for numerical integration which is the extremely efficient, but you are still using a phone.  If there is discontinuity over the interval, the program may not recognize it and return a blatantly invalid input.</string>
    <string name="helpAbout">If you have any suggestions, complaints or praise please forward them to me at jungajuice@gmail.com\n\nThank you very much to Professor Eck of Hobart and William Smith College for providing some very useful code for handling functions and derivatives.  He provided the basis for which this application is possible.\n\nAlso, a big thanks to Jonathan Thomson for designing a new icon for this application.\n\nDedicated to Leah</string>
    <string name="trigIdentity">Trig Identities</string>
    <string name="limitForm">Common Limits</string>
    <string name="derivForm">Derivatives</string>
    <string name="basicInteg">Basic Integrals</string>
    <string name="trigInteg">Trigonometric Integrals</string>
    <string name="invTrigInteg">Inverse Trig Integrals</string>
    <string name="logInteg">Logarithmic Integrals</string>
    <string name="expInteg">Exponential Integrals</string>
    <string name="hypInteg">Hyperbolic Integrals</string>
    <string name="iterPos">Iterations must be greater than 0.</string>
    <string name="iterInt">Iterations must be an integer.</string>
    <string name="integFun">Integrate the function</string>
    <string name="insertFun">Insert Function</string>
    <string name="calculate">Calculate</string>
    <string name="deriveF">Derive F(</string>
    <string name="withRespect">With respect to</string>
    <string name="derivative:">Derivative:</string>
    <string name="evaluateAt">Evaluate At</string>
    <string name="evaluate">Evaluate</string>
    <string name="rect">Rect</string>
    <string name="polar">Polar</string>
    <string name="param">Param</string>
    <string name="update">Update</string>
    <string name="powerSeriesHead">Create series for the function</string>
    <string name="forVariable">For the variable</string>
    <string name="centeredAt">centered at</string>
    <string name="numTerms">with this many terms</string>
    <string name="generate">Generate</string>
    <string name="clear">Clear</string>
    <string name="derive">Derive</string>
    <string name="addGraph">Add to Graph</string>
    <string name="findTangent">Find the tangent line to the function</string>
    <string name="whereVar">Where the variable</string>
    <string name="translations">If you would like to see this application in your native language, please visit http://crowdin.net/project/calculus-tools and help with the translations.</string>
    <string name="matrices">Matrices</string>
    <string name="calculator">Calculator</string>
    <string name="calculatorBeta">Calculator Beta</string>
    <string name="saveMatrix">Save Matrix</string>
    <string name="calcHelp">Extra functions:\n\nabs or norm(Matrix): square root of sum of squares\nunit(Matrix): unit matrix\ndet(Matrix): determinant of a matrix\ninv(Matrix): inverse of a matrix\neval(Matrix): eigenvalues\nevec(Matrix): eigenvectors\nsolve(Matrix A,Matrix B): Solves Ax=B\nfint(Function, Variable, Number, Number): Integration\nfint(Function, Variable, Variable, Number, Number, Function, Function): Integration of a function of 2 variables\n\nI have added a calculator function that supports matrix computations.  Some things may still be broken at this point.  The additional functions are listed above and are only available in the calculator.  You may also use ans to use the previous answers.  If the output is a matrix it may be stored by opening the menu.  When entering matrices, place each row on a separate line and use commas to separate the rows.  Spaces are ignored.  Much more to come for this feature soon.</string>
    <string name="helpConstants">pi = 3.14159265358979...\ne=2.71828182845904...\ngol=1.61803398874989 (golden ratio)\ngr=6.6742867*10^-11 (gravity)\ng=9.80665 (earth\'s gravity)(m/s/s)\ncc=299792458 (m/s) (speed of light)\nh=6.6260689633*10^-34 (plank\'s)</string>
    <string name="unfinished">Unfinished expression, ancillary</string>
    <string name="extraclose">Missing ) to finish statement.</string>
    <string name="extraopen">Too many ) in statement.</string>
    <string name="invalidfor">Invalid input for</string>
    <string name="insufArgs">Insufficient arguments for</string>
    <string name="notDefined">is not defined.</string>
    <string name="limited">Limited capabilities: Unable to parse expression:</string>
    <string name="noInput">No input.</string>
    <string name="addError">Cannot add matrix and scalar.</string>
    <string name="graph">Graph</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="saveimage">Save Image to SD</string>
    <string name="cannotwrite">Cannot write to SD</string>
    <string name="helpKeyboard">The old math keyboard is still bundled with this application.  While it cannot be used in this application, it may be used elsewhere. In order to activate it, go to Settings >> Language and Keyboard on your phone and check the box next to Calculus Tools.  In order to use the keyboard, long press on a text window, select Input method and then Calculus Tools.  You may use this same process to switch back to your normal keyboard as well.</string>
    <string name="options">Options</string>
    <string name="threed">3D</string>
    <string name="hapticFeedback">Haptic Feedback</string>
    <string name="annonymousData">Send annonymous user data.</string>
    <string name="launcherIcons">Launcher Icons</string>
    <string name="settings">Settings</string>
</resources>