<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

<ScrollView android:layout_width="fill_parent" 
		    android:layout_height="wrap_content">
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
<TextView android:text="@string/functions" 
  android:id="@+id/funTitle" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="22sp"
  />
<TextView android:text="@string/helpFunctions" 
  android:id="@+id/funText" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="14sp"
  android:layout_below="@+id/funTitle"
  android:textColor="#ffffff"/>
<TextView android:text="@string/constants" 
  android:id="@+id/conTitle" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="22sp"
  android:layout_below="@+id/funText"
  />
<TextView android:text="@string/helpConstants" 
  android:id="@+id/conText" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="14sp"
  android:layout_below="@+id/conTitle"
  android:textColor="#ffffff"/>
<TextView android:text="@string/calculatorBeta" 
  android:id="@+id/calcTitle" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="22sp"
  android:layout_below="@+id/conText"
  />
<TextView android:text="@string/calcHelp" 
  android:id="@+id/calcText" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="14sp"
  android:layout_below="@+id/calcTitle"
  android:textColor="#ffffff"/>
<TextView android:text="@string/graph" 
  android:id="@+id/graphTitle" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="22sp"
  android:layout_below="@+id/calcText"
  />
<TextView android:text="@string/helpGraph" 
  android:id="@+id/graphText" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="14sp"
  android:layout_below="@+id/graphTitle"
  android:textColor="#ffffff"/>
<TextView android:text="@string/derivative" 
  android:id="@+id/derTitle" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="22sp"
  android:layout_below="@+id/graphText"
  />
<TextView android:text="@string/helpDerivative" 
  android:id="@+id/derText" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="14sp"
  android:layout_below="@+id/derTitle"
  android:textColor="#ffffff"/>
<TextView android:text="@string/integrationArc" 
  android:id="@+id/integTitle" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="22sp"
  android:layout_below="@+id/derText"
  />
<TextView android:text="@string/helpIntegral" 
  android:id="@+id/integText" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="14sp"
  android:layout_below="@+id/integTitle"
  android:textColor="#ffffff"/>
<TextView android:text="@string/keyboard" 
  android:id="@+id/keyTitle" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="22sp"
  android:layout_below="@+id/integText"
  />
<TextView android:text="@string/helpKeyboard" 
  android:id="@+id/keyText" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="14sp"
  android:layout_below="@+id/keyTitle"
  android:textColor="#ffffff"/>
<TextView android:text="@string/miscellaneous" 
  android:id="@+id/miscTitle" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="22sp"
  android:layout_below="@+id/keyText"
  />
<TextView android:text="@string/helpAbout" 
  android:id="@+id/miscText" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="14sp"
  android:layout_below="@+id/miscTitle"
  android:textColor="#ffffff"/>
<TextView android:text="@string/translations" 
  android:id="@+id/translations" 
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:textSize="14sp"
  android:layout_below="@+id/miscText"
  android:textColor="#ffffff"/>
</RelativeLayout>
</ScrollView>
</LinearLayout>
